--- a/src/containers/CurrentContainer/_CurrentContainer.scss
+++ b/src/containers/CurrentContainer/_CurrentContainer.scss
@@ -13,6 +13,7 @@
 
 .currentLocation{
   padding-top: 20px;
+  margin-top: 0;
 }
 .currentRight{
   height: 100%;
