--- a/src/containers/ForecastContainer/_ForecastContainer.scss
+++ b/src/containers/ForecastContainer/_ForecastContainer.scss
@@ -2,7 +2,7 @@
 
 .forecastContainer{
   padding-top: 30px;
-
+  padding-left: 30px;
   height: 100vh;
   background-color: $blue;
   color: #FFFFFF;
