--- a/src/containers/Main/_Main.scss
+++ b/src/containers/Main/_Main.scss
@@ -8,4 +8,7 @@
 .contentContainer{
   height: 100%;
   padding: 0;
+  .row{
+    margin-right: 0;
+  }
 }
